Fix gitian descriptor

--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -32,7 +32,7 @@ packages:
 - "libxkbcommon0"
 remotes:
 - "url": "https://github.com/PACCommunity/PAC.git"
-  "dir": "paccoin"
+  "dir": "PAC"
 files: []
 script: |
 
@@ -142,7 +142,7 @@ script: |
   touch -d "${REFERENCE_DATETIME}" ${WRAP_DIR}/${prog}
   done
 
-  cd paccoin
+  cd PAC
   BASEPREFIX=`pwd`/depends
   # Build dependencies for each host
   for i in $HOSTS; do
