--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -31,7 +31,7 @@ packages:
 - "fonts-tuffy"
 remotes:
 - "url": "https://github.com/PACCommunity/PAC.git"
-  "dir": "paccoin"
+  "dir": "PAC"
 files:
 - "MacOSX10.11.sdk.tar.gz"
 script: |
@@ -102,7 +102,7 @@ script: |
   create_per-host_faketime_wrappers "2000-01-01 12:00:00"
   export PATH=${WRAP_DIR}:${PATH}
 
-  cd paccoin
+  cd PAC
   BASEPREFIX=`pwd`/depends
 
   mkdir -p ${BASEPREFIX}/SDKs
