Squashed proof of stake commits (initial set):
       61604537f58ed2165268a07f6a5bf77470361cb4
       4850537fdf2b0c6e87722a7c2262c2da210f2574
       17e8d4ef606935421962c19a33504d3ccd27c669
       89844c26031f0d066f1b0921d3e6837dac6cdac8
       c7881e59630585f1f7b71c6fadfa10e928f1954f

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -112,6 +112,7 @@ BITCOIN_CORE_H = \
   bip39.h \
   bip39_english.h \
   blockencodings.h \
+  blocksigner.h \
   bloom.h \
   cachemap.h \
   cachemultimap.h \
@@ -163,6 +164,7 @@ BITCOIN_CORE_H = \
   key.h \
   keepass.h \
   keystore.h \
+  kernel.h \
   dbwrapper.h \
   limitedmap.h \
   llmq/quorums.h \
@@ -265,6 +267,7 @@ libdash_server_a_SOURCES = \
   batchedlogger.cpp \
   bloom.cpp \
   blockencodings.cpp \
+  blocksigner.cpp \
   chain.cpp \
   checkpoints.cpp \
   dsnotificationinterface.cpp \
@@ -279,6 +282,7 @@ libdash_server_a_SOURCES = \
   httpserver.cpp \
   init.cpp \
   instantx.cpp \
+  kernel.cpp \
   dbwrapper.cpp \
   governance.cpp \
   governance-classes.cpp \
@@ -673,9 +677,9 @@ if EMBEDDED_LEVELDB
 include Makefile.leveldb.include
 endif
 
-if ENABLE_TESTS
-include Makefile.test.include
-endif
+#if ENABLE_TESTS
+#include Makefile.test.include
+#endif
 
 if ENABLE_BENCH
 include Makefile.bench.include
@@ -685,6 +689,6 @@ if ENABLE_QT
 include Makefile.qt.include
 endif
 
-if ENABLE_QT_TESTS
-include Makefile.qttest.include
-endif
+#if ENABLE_QT_TESTS
+#include Makefile.qttest.include
+#endif
