--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -200,10 +200,10 @@ RES_ICONS = \
   qt/res/icons/connect3.png \
   qt/res/icons/connect4.png \
   qt/res/icons/debugwindow.png \
-  qt/res/icons/drkblue_editpaste.png \
-  qt/res/icons/drkblue_address-book.png \
-  qt/res/icons/drkblue_editcopy.png \
-  qt/res/icons/drkblue_remove.png \
+  qt/res/icons/editpaste.png \
+  qt/res/icons/address-book.png \
+  qt/res/icons/editcopy.png \
+  qt/res/icons/remove.png \
   qt/res/icons/edit.png \
   qt/res/icons/editcopy.png \
   qt/res/icons/editpaste.png \
@@ -314,16 +314,16 @@ RES_IMAGES = \
   qt/res/images/dash_logo_horizontal.png \
   qt/res/images/unchecked.png \
   qt/res/images/checked.png \
-  qt/res/images/drkblue_downArrow.png \
-  qt/res/images/drkblue_downArrow_small.png \
-  qt/res/images/drkblue_upArrow_small.png \
-  qt/res/images/drkblue_leftArrow_small.png \
-  qt/res/images/drkblue_rightArrow_small.png \
-  qt/res/images/drkblue_qtreeview_selected.png \
-  qt/res/images/drkblue_walletFrame_bg.png
+  qt/res/images/downArrow.png \
+  qt/res/images/downArrow_small.png \
+  qt/res/images/upArrow_small.png \
+  qt/res/images/leftArrow_small.png \
+  qt/res/images/rightArrow_small.png \
+  qt/res/images/qtreeview_selected.png \
+  qt/res/images/walletFrame_bg.png
 
 RES_CSS = \
-  qt/res/css/drkblue.css
+  qt/res/css/standard.css
 
 RES_MOVIES = $(wildcard $(srcdir)/qt/res/movies/spinner-*.png)
 
