--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -28,7 +28,8 @@ QT_TS = \
   qt/locale/dash_tr.ts \
   qt/locale/dash_vi.ts \
   qt/locale/dash_zh_CN.ts \
-  qt/locale/dash_zh_TW.ts
+  qt/locale/dash_zh_TW.ts \
+  qt/locale/dash_ua.ts
 
 QT_FORMS_UI = \
   qt/forms/addressbookpage.ui \
@@ -327,7 +328,7 @@ RES_CSS = \
 
 RES_MOVIES = $(wildcard $(srcdir)/qt/res/movies/spinner-*.png)
 
-BITCOIN_RC = qt/res/dash-qt-res.rc
+BITCOIN_RC = qt/res/pacglobal-qt-res.rc
 
 BITCOIN_QT_INCLUDES = -I$(builddir)/qt -I$(srcdir)/qt -I$(srcdir)/qt/forms \
   -I$(builddir)/qt/forms -DQT_NO_KEYWORDS
@@ -355,7 +356,7 @@ $(qt_libpacglobalqt_a_OBJECTS) $(qt_pacglobal_qt_OBJECTS) : | $(QT_MOC)
 $(QT_MOC): $(PROTOBUF_H)
 $(QT_MOC_CPP): $(PROTOBUF_H)
 
-# dash-qt binary #
+# pacglobal-qt binary #
 qt_pacglobal_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INCLUDES) \
   $(QT_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS)
 qt_pacglobal_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
@@ -410,9 +411,9 @@ CLEAN_QT = $(nodist_qt_libpacglobalqt_a_SOURCES) $(QT_QM) $(QT_FORMS_H) qt/*.gcd
 CLEANFILES += $(CLEAN_QT)
 
 dash_qt_clean: FORCE
-	rm -f $(CLEAN_QT) $(qt_libpacglobalqt_a_OBJECTS) $(qt_pacglobal_qt_OBJECTS) qt/dash-qt$(EXEEXT) $(LIBBITCOINQT)
+	rm -f $(CLEAN_QT) $(qt_libpacglobalqt_a_OBJECTS) $(qt_pacglobal_qt_OBJECTS) qt/pacglobal-qt$(EXEEXT) $(LIBBITCOINQT)
 
-dash_qt : qt/dash-qt$(EXEEXT)
+dash_qt : qt/pacglobal-qt$(EXEEXT)
 
 ui_%.h: %.ui
 	@test -f $(UIC)
