--- a/src/qt/res/pacglobal-qt-res.rc
+++ b/src/qt/res/pacglobal-qt-res.rc
@@ -22,10 +22,10 @@ BEGIN
             VALUE "CompanyName",        "PACGlobal"
             VALUE "FileDescription",    PACKAGE_NAME " (GUI node for PACGlobal)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "dash-qt"
+            VALUE "InternalName",       "pacglobal-qt"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "dash-qt.exe"
+            VALUE "OriginalFilename",   "pacglobal-qt.exe"
             VALUE "ProductName",        PACKAGE_NAME
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
